R96: Fix Altivec WPA Wordlist crack on ppc that I broke in R91.  This accelerated wpa crack does not work on intel but I'll leave the code there in case anyone wants to investigate further.  Also added a words / sec status to the wpa crack dialog that I used for benchmarking while debigging this problem.

R95: Hopfully fix the last of the build issues some people are having  (including growl link issues)

R94: Fixed Active mode on MacBook Pro (Hopfully) please test

R93: Missed one.  Also changed compile.command to allow us to specify the configuration

R92: Set -arch back to native to allow compile on ppc without the universal sdk.  This also adds a Universal compile configuration to make it easier to make a universal release

R91: First Intel Commit.  Large number of changes

R90: Add growl notifications.  Requires intalation of growl to use feature.  If grow is not installed, this is not a problem. (themacuser)

R89: Apply multi-thread crack patch.  This version sets 1 thread per cpu instead of just 4

R88: 

R87: Change InfoPlist.strings.templ back into a text file so that compile.command can update the revision info in the get info string

R86: More search improvements by themacuser

R85: Fix all active attacks after packet reinjection was cancelled or failed

R84: Fix problem when build path contained a space

R83: Fix Default case in search code thanks themacuser

R82:
Added Export to Google Maps

R81:
Improved search patch from themacuser

R80:

Continue scanning after save if we were scanning before saving

R79:

Fixed "Save Filtered Nets" bug with modified patches by themacuser.  

R67:

Deauth All Networks
fixed bug false WPA detection
WPA detection in active mode

R66:

can show rates
fixed minor problem with MACJack cards
warning if not running tiger
increasing reliability of Airport reload (aggressive reload)

till R65:

traffic view -> opengl
new design
de.binaervarianz.kismac
moved everything to a new folder (KisMACng)
parts are apple script now