@@ -9,6 +9,7 @@
 #import "PrefsDriver.h"
 #import "WaveHelper.h"
 #import "WaveDriver.h"
+#import "WaveDriverAirportExtreme.h"
 
 @implementation PrefsDriver
 
@@ -74,6 +75,7 @@
     int val, startCorrect = 0;
     
     [_frequence     setFloatValue:  [[controller objectForKey:@"frequence"   ] floatValue]];
+    [_aeForever     setState:       [[controller objectForKey:@"aeForever"   ] intValue]]; 
 
     if ([_driverTable numberOfSelectedRows]) {
         d = [self getCurrentSettings];
@@ -155,6 +157,7 @@
     unsigned int x, y;
     
     [controller setObject:[NSNumber numberWithFloat: [_frequence     floatValue]]    forKey:@"frequence"];
+    [controller setObject:[NSNumber numberWithInt:[_aeForever state]] forKey:@"aeForever"];
 
     if (i < 0) return YES;
     d = [[self getCurrentSettings] mutableCopy];
@@ -303,5 +306,22 @@
     [self setValueForSender:_channelSel];
 }
 
+- (IBAction)enableAEForever:(id)sender {
+    if (NSAppKitVersionNumber < 824.11) {
+		NSLog(@"MacOS is not 10.4.2! AppKitVersion: %f < 824.11", NSAppKitVersionNumber);
+		
+		NSRunCriticalAlertPanel(
+                                NSLocalizedString(@"Could not enable Monitor Mode for Airport Extreme.", "Error dialog title"),
+                                NSLocalizedString(@"Incompatible MacOS version! You will need at least MacOS 10.4.2!.", "Error dialog description"),
+                                OK, nil, nil);
+        return;
+	}
+    [WaveDriverAirportExtreme setMonitorMode: [_aeForever state]];
+    [self setValueForSender:sender];
+    NSRunCriticalAlertPanel(
+                            NSLocalizedString(@"You Must Reboot.", "Error dialog title"),
+                            NSLocalizedString(@"You must reboot after changing this setting for it to take effect.", "Error dialog description"),
+                            OK, nil, nil);
+}
 
 @end
